# rfc-editor

./: README.md  SPEC.md  pyproject.toml
src/rfc_editor/: __init__.py
tests/: __init__.py  conftest.py  test_author.py  test_document.py  test_editor.py  test_section.py
